[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Particles_playground/Enemy_AI/Pet_try01.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 132, 82 )

[node name="Pet_try01" type="KinematicBody2D"]
collision_layer = 4096
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -100, -100 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 132, 82 )
shape = SubResource( 2 )

[node name="lbl_ownerName" type="Label" parent="."]
margin_left = -8.0
margin_top = -24.0
margin_right = 74.0
margin_bottom = -10.0
rect_min_size = Vector2( 82, 14 )
text = "Owner name"
align = 1
valign = 1

[node name="lbl_status" type="Label" parent="."]
margin_left = -8.0
margin_top = -40.0
margin_right = 72.0
margin_bottom = -24.0
rect_min_size = Vector2( 80, 16 )
text = "Savage"
align = 1
valign = 1

[node name="lbl_GUI_forDebug" type="Label" parent="."]
margin_left = -8.0
margin_top = -70.0
margin_right = 67.0
margin_bottom = -56.0
rect_min_size = Vector2( 75, 14 )
text = "Default text"
align = 1
valign = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
